added about me section, contact section and added background picture

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,6 @@
-.background {
-    
-    width: auto;
+body {
+    background-image: url(./pictures/background.jpg);
+    background-size: cover;
+    background-position: center;
+
 }
