--- a/assets/style.css
+++ b/assets/style.css
@@ -56,6 +56,11 @@ section {
     margin: 30px;
     padding: 15px;
 }
+
+section h3{
+    padding-bottom: 10px;
+}
+
 .about-me {
     display: inline-block;
     width: 75%;
@@ -69,9 +74,6 @@ section {
     display: inline-block;
 }
 
-.about-me h3{
-    padding-bottom: 10px;
-}
 
 
 .contact-info{
