--- a/assets/style.css
+++ b/assets/style.css
@@ -61,6 +61,7 @@ section h3{
     padding-bottom: 10px;
 }
 
+/*about me styling*/
 .about-me {
     display: inline-block;
     width: 75%;
@@ -90,8 +91,7 @@ section h3{
     grid-template-columns: 1fr 1fr 3fr;
     grid-template-rows: 1fr 1fr;
     border: 4px solid #8fc1e3;
-    color:whitesmoke;
-    
+    color:whitesmoke;    
 }
 
 .project-grid-item {
