--- a/assets/style.css
+++ b/assets/style.css
@@ -79,28 +79,37 @@ section h3{
 }
 
 .project-wrapper{
-    display: flex;
+    display: grid;
     width: 100%;
-    justify-content: center;
+   
 }
 
 .project-grid-container {
+    
     background: #687864;
-    width: 100%;
     display: grid;
-    grid-template-columns: 1fr 1fr 3fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 25% 25% 25% 25%;
+    grid-template-rows: 50% 50%;
     border: 4px solid #8fc1e3;
     color:whitesmoke;    
 }
 
-.project-grid-item {
-    height: 150px;
-    width: 175px;
-    padding: 50px;
+.grid-item {
+    display: grid;
+    height: 40px;
+    width: 40px;
 }
 
-.project-grid-item img{
+#item1 {
+    grid-area: 0 / 0 / 1 / 1;
+    
+}
+
+#item2 {
+    grid-area: 1 / 0 / 2 / 1;
+}
+
+/* .grid-item img{
     height: 100px;
     width: 125px;
 }
@@ -108,7 +117,7 @@ section h3{
 .first-project img{
     height:200px;
     width:300px;
-}
+} */
 
 
 /*contact section styling*/
