updated project section with newest group project

--- a/assets/style.css
+++ b/assets/style.css
@@ -105,9 +105,9 @@ section h3{
     width: 125px;
 }
 
-.first-project img{
-    height:200px;
-    width:300px;
+.latest-project img{
+    height:150px;
+    width:225px;
 }
 
 
